--- a/charts/cysl-frontend/templates/ingress.yaml
+++ b/charts/cysl-frontend/templates/ingress.yaml
@@ -7,7 +7,15 @@ spec:
   stripPrefix:
     prefixes:
       - /api
-
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: cysl-server-headers
+spec:
+  headers:
+    customRequestHeaders:
+      X-Forwarded-Proto: "https"
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -16,7 +24,7 @@ metadata:
   labels:
     app: cysl-ingress
   annotations:
-    traefik.ingress.kubernetes.io/router.middlewares: {{ .Release.Namespace }}-cysl-server-headers@kubernetescrd,strip-api-prefix@kubernetescrd
+    traefik.ingress.kubernetes.io/router.middlewares: {{ .Release.Namespace }}-cysl-server-headers@kubernetescrd,{{ .Release.Namespace }}-strip-api-prefix@kubernetescrd
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
     traefik.ingress.kubernetes.io/router.tls: "true"
     cert-manager.io/cluster-issuer: selfsigned-issuer
